tests/fail/include_with_error.werk
include "included"

#!file included=let a=
